docker/common/envoy.yml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: "0.0.0.0"
        port_value: 8544
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /var/log/envoy_access.log
              route_config:
                virtual_hosts:
                  - name: client0
                    domains: ['*']
                    routes:
                      - match:
                          safe_regex:
                            # Allow all oasis-core methods.
                            regex: '^/oasis-core\..*'
                        route:
                          cluster: client_0_grpc
                          timeout: 0s
                          max_stream_duration:
                            grpc_timeout_header_max: 0s
                      - match:
                          prefix: ''
                        direct_response:
                          status: 404
                          body:
                            inline_string: Invalid method.
                    typed_per_filter_config:
                      envoy.filters.http.cors:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                        expose_headers: grpc-status,grpc-message,grpc-status-details-bin
                        allow_origin_string_match:
                          - exact: '*'
                        allow_headers: content-type,x-grpc-web,x-user-agent
                        max_age: '1728000'
              http_filters:
                - name: envoy.filters.http.grpc_web
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                - name: envoy.filters.http.cors
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: client_0_grpc
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: cluster_0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /serverdir/node/net-runner/network/client-0/internal.sock
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
layered_runtime:
  layers:
  - name: static
    static_layer:
      re2:
        max_program_size:
          error_level: 1000000
